<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.rtisas.sas.view.LoginView">

    <androidx.appcompat.widget.Toolbar
        style="@style/ToolBar"
        android:weightSum="1">
        <TextView
            style="@style/Title"
            android:text="@string/app_version" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        style="@style/Content"
        android:orientation="vertical">

        <ImageView
            style="@style/Logo"
            android:src="@drawable/logo"/>

        <LinearLayout
            style="@style/Content"
            android:orientation="horizontal">

            <FrameLayout style="@style/Margin" />

            <LinearLayout
                style="@style/Content"
                android:orientation="vertical">

                <FrameLayout
                    style="@style/Margin"
                    android:layout_weight="1.1"/>

                <EditText
                    style="@style/TextEdit"
                    android:id="@+id/email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/email" />

                <EditText
                    style="@style/TextEdit"
                    android:id="@+id/password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/password" />

                <RelativeLayout
                    style="@style/Margin"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        style="@style/TextButton"
                        android:id="@+id/sign_in"
                        android:text="@string/sign_in"
                        android:background="@drawable/button"/>

                </RelativeLayout>

                <RelativeLayout
                    style="@style/Margin"
                    android:layout_weight="1.1">

                    <TextView
                        style="@style/TextLink"
                        android:id="@+id/recover"
                        android:text="@string/recover"/>

                </RelativeLayout>


                <FrameLayout
                    style="@style/Margin"
                    android:layout_weight="1.15"/>

            </LinearLayout>

            <FrameLayout style="@style/Margin" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>