<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.rtisas.sas.view.LoginView">

    <androidx.appcompat.widget.Toolbar
        style="@style/ToolBar">
        <TextView
            style="@style/Title"
            android:text="@string/newpassword"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        style="@style/Content"
        android:orientation="vertical">

        <ImageView
            style="@style/Logo"
            android:src="@drawable/logo" />

        <LinearLayout
            style="@style/Content"
            android:orientation="horizontal">

            <FrameLayout
                style="@style/Margin"></FrameLayout>

            <LinearLayout
                style="@style/Content"
                android:orientation="vertical">

                <RelativeLayout
                    style="@style/Margin"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        style="@style/Text"
                        android:text="@string/infon"/>

                </RelativeLayout>

                <LinearLayout
                    style="@style/Margin"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:gravity="center">

                    <EditText
                        style="@style/TextEdit"
                        android:id="@+id/code"
                        android:hint="@string/code"
                        android:inputType="text"
                        android:drawableStart="@drawable/email" />

                    <EditText
                        style="@style/TextEdit"
                        android:id="@+id/password"
                        android:hint="@string/newpassword"
                        android:inputType="textPassword"
                        android:drawableStart="@drawable/password" />

                    <EditText
                        style="@style/TextEdit"
                        android:id="@+id/newpassword"
                        android:hint="@string/repeatpassword"
                        android:inputType="textPassword"
                        android:drawableStart="@drawable/password" />

                </LinearLayout>

                <RelativeLayout
                    style="@style/Margin"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        style="@style/TextButton"
                        android:id="@+id/confirm"
                        android:text="@string/confirm"
                        android:background="@drawable/button"/>

                </RelativeLayout>

            </LinearLayout>

            <FrameLayout style="@style/Margin" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
